- imported underscore prediction tutorial

--- a/pom.xml
+++ b/pom.xml
@@ -102,11 +102,12 @@
 
         
         <!-- Misc -->
-        <dependency> 
-            <groupId>com.github.arcnor</groupId>
-            <artifactId>universal-tween-engine</artifactId>
-            <version>6.3.4</version>
-        </dependency>        
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>22.0</version>
+        </dependency>
+     
         
         <!-- Testing -->
         <dependency>
